# zxing-cpp2rs

./: Cargo.toml  LICENSE  README.md  build.rs
examples/: demo.rs
src/: lib.rs
src/extensions/: ReaderOptionsExt.h
