[package]
name = "zxing-cpp2rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
autocxx = "0.26.0"
cxx = "1.0.114"
image = "0.24.7"
once_cell = "1.19.0"

[dev-dependencies]
anyhow = "1.0.79"

[build-dependencies]
autocxx-build = "0.26.0"
miette = {version = "5.10.0", features = ["fancy"]}
cmake = "0.1.50"